fix form stretching on a big screen

--- a/task_11/css/style.css
+++ b/task_11/css/style.css
@@ -231,8 +231,6 @@ th {
 }
 
 form {
-	display: flex;
-	flex-wrap: wrap;
 	padding: 0 1rem;
 }
 
